k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asr-nmt
  labels:
    app: asr-nmt-serve
